2011-07-14  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/omp.xsl (result-details): Add delta param.  Skip overrides
	widget if set.
	(get_delta_result): Pass delta flag to result-details.

2011-07-14  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/html/img/os_gos.png: New.

	* CMakeLists.txt: Install the new icon.

2011-07-13  Matthew Mundell <matthew.mundell@greenbone.net>

	Enable result details for delta results.

	* src/gsad.c (exec_omp_post): Pass result_id to get_report_omp.

	* src/gsad_omp.c (get_report_omp): Add a result_id arg.  If given adjust
	the XML to be a GET_DELTA_RESULT instead of a GET_REPORT.

	* src/gsad_omp.h: Update header accordingly.

	* src/html/omp.xsl (result [details]): Take task info as args.
	(result-detailed): Add details icon to delta case.
	(get_delta_result): New template.

2011-07-13  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad.c (exec_omp_post): Pass overrides flag to delete_report_omp.

	* src/gsad_omp.c (delete_report_omp): Add apply_overrides flag.  Call
	through to get_tasks instead of doing the OMP by hand, as some of the OMP
	was missing.

	* src/gsad_omp.h: Update header accordingly.

	* src/html/omp.xsl (report): Add override param to delete icon.

2011-07-13  Henri Doreau <henri.doreau@greenbone.net>

	* src/html/os.xml: Updated with new entries.

2011-07-12  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/html/img/os_junos.png: New.

	* CMakeLists.txt: Install the new icon.

2011-06-30  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad.c (exec_omp_post): Allow hosts to be empty in save_note and
	save_override.

2011-06-30  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/omp.xsl (result [details]): Add overrides control.

2011-06-30  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/omp.xsl (html-create-note-form, html-edit-note-form)
	(html-create-override-form, html-edit-override-form): Turn off the details